code for edgeboxes plot

--- a/Robert/edges_boxes.ipynb
+++ b/Robert/edges_boxes.ipynb
@@ -155,7 +155,7 @@
     "            # Display only a few examples for familiarity\n",
     "            if len(gt_boxes) > 2:\n",
     "                break  # Remove this line if you want to display more images\n",
-    "displayBoxesWithParams(600,0.7,0.65,0.04)"
+    "#displayBoxesWithParams(600,0.7,0.65,0.04)"
    ]
   },
   {
@@ -368,7 +368,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: ../Potholes/annotated-images/img-639.jpg, image 1/50          \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: ../Potholes/annotated-images/img-327.jpg, image 42/50          \r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 91\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m minScore \u001b[38;5;129;01min\u001b[39;00m minScore_values:\n\u001b[1;32m     89\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m maxBoxes \u001b[38;5;129;01min\u001b[39;00m maxBox_values:\n\u001b[1;32m     90\u001b[0m         \u001b[38;5;66;03m#print(f\"Trying parameters: alpha={alpha}, beta={beta}, minScore={minScore} -----------------------------------------------------------------------------------------\")\u001b[39;00m\n\u001b[0;32m---> 91\u001b[0m         abo, avg_recalls \u001b[38;5;241m=\u001b[39m \u001b[43mdisplayBoxesWithParamsEval\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmaxBoxes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbeta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminScore\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     93\u001b[0m         \u001b[38;5;66;03m# Store the ABO with its parameters\u001b[39;00m\n\u001b[1;32m     94\u001b[0m         all_results\u001b[38;5;241m.\u001b[39mappend((alpha, beta, minScore, abo, avg_recalls))\n",
+      "Cell \u001b[0;32mIn[12], line 36\u001b[0m, in \u001b[0;36mdisplayBoxesWithParamsEval\u001b[0;34m(maxBoxes, alpha, beta, minScore)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Generate Edge Boxes proposals\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m edge_boxes_proposals \u001b[38;5;241m=\u001b[39m \u001b[43mget_edge_boxes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodel.yml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxBoxes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbeta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminScore\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m#limited_proposals = edge_boxes_proposals[:max_proposals]\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m# Calculate recall for each IoU threshold\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m iou_threshold \u001b[38;5;129;01min\u001b[39;00m iou_thresholds:\n",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m, in \u001b[0;36mget_edge_boxes\u001b[0;34m(image, model_path, maxBoxes, alpha, beta, minScore)\u001b[0m\n\u001b[1;32m      7\u001b[0m edge_boxes\u001b[38;5;241m.\u001b[39msetMinScore(minScore)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Load the Structured Edge Detection model\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m edge_detector \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mximgproc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreateStructuredEdgeDetection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Convert image to RGB and then to 32-bit floating point\u001b[39;00m\n\u001b[1;32m     13\u001b[0m image_rgb \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(image, cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2RGB)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -376,9 +404,10 @@
     "iou_thresholds = [0.5]\n",
     "# Define max number of proposals to use (e.g., 100)\n",
     "#max_proposals = 100\n",
-    "numImagesPer = 1\n",
+    "numImagesPer = 50\n",
     "\n",
-    "def displayBoxesWithParamsEval(maxBoxes, alpha, beta, minScore, max_proposals):\n",
+    "### RUN THIS CELL TO GET EDGEBOXES PLOT --------------------------------------\n",
+    "def displayBoxesWithParamsEval(maxBoxes, alpha, beta, minScore):\n",
     "    all_recalls = {iou: [] for iou in iou_thresholds}\n",
     "    all_abos = []\n",
     "    imageCounter = 1\n",
@@ -405,11 +434,11 @@
     "            \n",
     "            # Generate Edge Boxes proposals\n",
     "            edge_boxes_proposals = get_edge_boxes(image, \"model.yml\", maxBoxes, alpha, beta, minScore)\n",
-    "            limited_proposals = edge_boxes_proposals[:max_proposals]\n",
+    "            #limited_proposals = edge_boxes_proposals[:max_proposals]\n",
     "            \n",
     "            # Calculate recall for each IoU threshold\n",
     "            for iou_threshold in iou_thresholds:\n",
-    "                recall = calc_recall(limited_proposals, gt_boxes, iou_threshold)\n",
+    "                recall = calc_recall(edge_boxes_proposals, gt_boxes, iou_threshold)\n",
     "                all_recalls[iou_threshold].append(recall)\n",
     "            \n",
     "            # Calculate Average Best Overlap (ABO)\n",
@@ -451,7 +480,7 @@
     "alpha_values = [0.7]\n",
     "beta_values = [0.65]\n",
     "minScore_values = [0.004]\n",
-    "maxBox_values = [600]\n",
+    "maxBox_values = [5,25,100,200,400,600,800,1000,1500,2000,4000]\n",
     "#[0.005, 0.01, 0.015, 0.02, 0.03, 0.04, 0.05, 0.1, 0.2]\n",
     "# Loop through each combination of parameters\n",
     "for alpha in alpha_values:\n",
@@ -459,7 +488,7 @@
     "        for minScore in minScore_values:\n",
     "            for maxBoxes in maxBox_values:\n",
     "                #print(f\"Trying parameters: alpha={alpha}, beta={beta}, minScore={minScore} -----------------------------------------------------------------------------------------\")\n",
-    "                abo, avg_recalls = displayBoxesWithParamsEval(maxBoxes, alpha, beta, minScore, 100)\n",
+    "                abo, avg_recalls = displayBoxesWithParamsEval(maxBoxes, alpha, beta, minScore)\n",
     "                \n",
     "                # Store the ABO with its parameters\n",
     "                all_results.append((alpha, beta, minScore, abo, avg_recalls))\n",
@@ -476,6 +505,24 @@
     "# Print the best result\n",
     "print(\"\\nBest ABO:\")\n",
     "print(f\"alpha = {best_result[0]}, beta = {best_result[1]}, minScore = {best_result[2]}, ABO = {best_result[3]}, Avg Recall 0.5 = {best_result[4][0.5]}\")\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "# Plot ABO\n",
+    "plt.plot(maxBoxesfinal, abos, marker='o', linestyle='-', label='ABO', color='b')\n",
+    "\n",
+    "# Plot Average Recall\n",
+    "plt.plot(maxBoxesfinal, recalls, marker='s', linestyle='--', label='Average Recall (IoU=0.5)', color='r')\n",
+    "\n",
+    "# Add labels, title, and legend\n",
+    "plt.xlabel('maxBoxes')\n",
+    "plt.ylabel('Metrics')\n",
+    "plt.title('Average ABO and Recall vs maxBoxes')\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n",
     "\n",
     "# # Plot minScore vs ABO\n",
     "# plt.figure(figsize=(8, 6))\n",
