--- a/Rasmus/model_training.ipynb
+++ b/Rasmus/model_training.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "\n",
     "normalize_only = transforms.Compose([\n",
     "    transforms.ToPILImage(),  # Convert NumPy array to PIL Image\n",
-    "    transforms.ToTensor(),    # Convert PIL Image to Tensor [0,1]   \n",
+    "    transforms.ToTensor(),    # Convert PIL Image to Tensor [0,1]\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406],  # Normalize the tensor\n",
     "                       std=[0.229, 0.224, 0.225])\n",
     "])\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +306,102 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 463/463 [00:35<00:00, 13.07it/s]\n"
+      "100%|██████████| 463/463 [00:35<00:00, 13.07it/s]\n",
+      " 80%|████████  | 8/10 [06:29<01:37, 48.58s/epoch]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss train: 0.630\t test: 1.001\t Accuracy train: 79.6%\t test: 75.4%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 463/463 [00:34<00:00, 13.43it/s]\n",
+      " 90%|█████████ | 9/10 [07:17<00:48, 48.29s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss train: 0.626\t test: 1.076\t Accuracy train: 79.6%\t test: 76.4%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 463/463 [00:36<00:00, 12.72it/s]\n",
+      "100%|██████████| 10/10 [08:07<00:00, 48.72s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss train: 0.632\t test: 1.085\t Accuracy train: 79.3%\t test: 76.6%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train_acc': [0.764614431945842,\n",
+       "  0.788123208879375,\n",
+       "  0.7942306250526412,\n",
+       "  0.7960226581720582,\n",
+       "  0.794760249939252,\n",
+       "  0.791658771587995,\n",
+       "  0.7942055819650233,\n",
+       "  0.7960749125770411,\n",
+       "  0.7964621019673941,\n",
+       "  0.7928781214550903],\n",
+       " 'val_acc': [0.73681853878471,\n",
+       "  0.7598549255973275,\n",
+       "  0.7586481425699927,\n",
+       "  0.7610626320596421,\n",
+       "  0.7632519994444198,\n",
+       "  0.7563805245412273,\n",
+       "  0.7551878956841381,\n",
+       "  0.7536868752565169,\n",
+       "  0.7636374655830314,\n",
+       "  0.7661844605639295],\n",
+       " 'train_loss': [0.744725150500724,\n",
+       "  0.6601844908866717,\n",
+       "  0.6349266919731836,\n",
+       "  0.6352231899682698,\n",
+       "  0.627282217692093,\n",
+       "  0.6292411004621575,\n",
+       "  0.631784806241227,\n",
+       "  0.6299278192527866,\n",
+       "  0.6256811970253485,\n",
+       "  0.6318037473228528],\n",
+       " 'val_loss': [1.283623400962714,\n",
+       "  1.2564314004748758,\n",
+       "  1.2584266275769533,\n",
+       "  1.3777752044526013,\n",
+       "  1.2215861396657095,\n",
+       "  1.2610091237407741,\n",
+       "  1.2190603114137746,\n",
+       "  1.0012043223838614,\n",
+       "  1.0757801502642006,\n",
+       "  1.0847427530421152]}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -316,11 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# torch.save(model.state_dict(), 'model_2.pth')"
+    "torch.save(model.state_dict(), 'model_2.pth')"
    ]
   },
   {
